--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "autoprefixer": "^10.4.20",
     "emoji-flags": "^1.3.0",
     "flatpickr": "^4.6.13",
-    "next": "15.1.3",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
