--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/postcss": "^4.0.9",
     "apexcharts": "^4.3.0",
@@ -42,6 +44,7 @@
     "@types/react-dom": "^19",
     "@types/react-flatpickr": "^3.8.11",
     "@types/react-transition-group": "^4.4.12",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
