--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
-    "emoji-flags": "^1.3.0",
+    "country-flag-icons": "^1.5.9",
     "flatpickr": "^4.6.13",
     "next": "^15.2.4",
     "react": "^18.3.1",
