Fix: Wrap useSearchParams in Suspense boundary and implement proper loading states

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -26,7 +28,9 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "country-flag-icons": "^1.5.9",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.501.0",
     "next": "^15.2.4",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
